# PIG

./: .gitignore  Makefile  README.md  pyproject.toml
data/processed/: basic_report.md  oc_dfg.json  ocel_stub.json
data/raw/: plasma_etcher_event_log.csv  plasma_etcher_event_log.ocel.json
scripts/: bootstrap.sh  run.sh
src/pig/: main.py  pipeline.py  visualize.py
