[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pig"
version = "0.1.0"
description = "Process Intelligence Graph MVP scaffold"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "PIG Team"}]
dependencies = []

[project.scripts]
pig = "pig.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
